--- a/styles/style.css
+++ b/styles/style.css
@@ -1,46 +1,40 @@
-html {
-  font-size: 10px;
-  font-family: 'Open Sans', sans-serif;
-}
-
-
-h1 {
-  font-size: 60px;
-  text-align: center;
-}
-
-p, li {
-  font-size: 16px;
-  line-height: 2;
-  letter-spacing: 1px;
-}
-
-
-html {
-  background-color: #00539F;
-}
-
 body {
-  width: 600px;
-  margin: 0 auto;
-  background-color: #FF9500;
-  padding: 0 20px 20px 20px;
-  border: 5px solid black;
+    background-color: #fff;
+    color: #333;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1em;
+    margin: 0;
 }
 
 h1 {
-  margin: 0;
-  padding: 20px 0;
-  color: #00539F;
-  text-shadow: 3px 3px 1px black;
+    color: hotpink;
+    font-size: 2em;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    border-bottom: purple dotted 10px;
 }
 
-img {
-  display: block;
-  margin: 0 auto;
+h2 {
+    font-size: 1.5em;
+    font-style: italic;
 }
 
-img.firefox-logo {
-  width: auto;
-  height: 400px;
+.job-title {
+    color: #999999;
+    font-weight: bold;
+}
+
+a:link,
+a:visited {
+    color: #fb6542;
+}
+
+a:hover {
+    text-decoration: none;
+    color: green;
+}
+
+.contact-information > .list {
+    background-color: #eeeeee;
+    border: solid purple 5px;
+    padding: 1px;
 }
